--- a/argocdod/apps/toston/templates/quay-test.yaml
+++ b/argocdod/apps/toston/templates/quay-test.yaml
@@ -52,7 +52,7 @@ spec:
                 defaultMode: 420
           containers:
             - name: quay-test
-              image: quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.quay_test.image.repository }}/{{ .Values.quay_test.image.name }}:{{ .Values.quay_test.image.tag }}
+              image: {{ .Values.quay_test.image.repository }}/{{ .Values.quay_test.image.name }}:{{ .Values.quay_test.image.tag }}
               env:
                 - name: fqdn
                   value: {{ .Values.configmap.fqdn }}
