--- a/argocdod/apps/quaylogs/templates/cronjob.yml
+++ b/argocdod/apps/quaylogs/templates/cronjob.yml
@@ -22,8 +22,8 @@ spec:
                 defaultMode: 420
           containers:
             - name: quaylogs
-              image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.containers.repository }}/{{ .Values.containers.image }}:{{ .Values.containers.version }}'
-              #image: 'docker.io/hacetah726/quaylogs:2'
+              #image: 'quay.apps.{{ .Values.configmap.fqdn }}/{{ .Values.containers.repository }}/{{ .Values.containers.image }}:{{ .Values.containers.version }}'
+              image: 'docker.io/hacetah726/quaylogs:3'
               env:
                 - name: fqdn
                   value: {{ .Values.configmap.fqdn }}
