--- a/argocdod/apps/quaylogs/templates/cronjob.yml
+++ b/argocdod/apps/quaylogs/templates/cronjob.yml
@@ -16,6 +16,13 @@ spec:
       template:
         spec:
           volumes:
+            - name: trusted-ca
+              configMap:
+                name: trusted-ca
+                items:
+                  - key: ca-bundle.crt
+                    path: tls-ca-bundle.pem
+                defaultMode: 420
             - name: config-volume
               configMap:
                 name: quaylogs
@@ -28,6 +35,9 @@ spec:
                 - name: fqdn
                   value: {{ .Values.configmap.fqdn }}
               volumeMounts:
+                - name: trusted-ca
+                  readOnly: true
+                  mountPath: /etc/pki/ca-trust/extracted/pem
                 - name: config-volume
                   mountPath: /quaylogs/src/config
               imagePullPolicy: Always
