use cert when quaylogs requests

--- a/quay-logs/code/Dockerfile
+++ b/quay-logs/code/Dockerfile
@@ -4,9 +4,8 @@ RUN userdel saslauth
 RUN useradd -u 999 -ms /bin/bash quaylogs
 RUN mkdir -p /quaylogs/src/config
 WORKDIR /quaylogs/src
-COPY oc app.py start.sh .
-RUN mv oc /usr/bin
+COPY oc app.py ./
 RUN pip3 install requests kubernetes
 RUN chmod 777 /quaylogs -R && chown quaylogs:quaylogs /quaylogs -R
 USER quaylogs
-CMD sh ./start.sh && python app.py
+CMD python app.py
